# duttsy

./: PKGBUILD  README.md  REAME.md  main.py  pyproject.toml
duttsy/: main.py
duttsy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
