[project]
name = "duttsy"
version = "0.1.0"
description = "very simple dotfile mamager based on stow"
authors = [{ name="Lobotomized Hampster" }] 
dependencies = []
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
duttsy = "duttsy.main:main"
